# can_you_handle_it

./: .gitignore  README.md
src/: Dockerfile_including_yolo  docker-compose.yml
src/projects/: extract_frames_from_bag.py  rename.py
src/projects/handle_detect/: CMakeLists.txt  package.xml
src/projects/handle_detect/launch/: README  pipeline.launch  test-loop.launch  test-random.launch
src/projects/handle_detect/msg/: CNN.msg  clustering.msg  markers.msg
src/projects/handle_detect/src/: clustering.py  gripper_pos.py  pub_drawer_pcd.py  pub_ex_image.py  pub_ex_pcd.py  segmentation.py  test-script.py
src/projects/images/bedside_table/metadata/: _Color_metadata_1686919330313.70214843750000.txt  _Color_metadata_1686919330347.05126953125000.txt  _Color_metadata_1686919330380.40014648437500.txt  _Color_metadata_1686919330413.74902343750000.txt  _Color_metadata_1686919330447.09765625000000.txt  _Color_metadata_1686919330480.44653320312500.txt  _Color_metadata_1686919330513.79516601562500.txt  _Color_metadata_1686919330547.14379882812500.txt  _Color_metadata_1686919330580.49218750000000.txt  _Color_metadata_1686919330613.84082031250000.txt  _Color_metadata_1686919330647.18920898437500.txt  _Color_metadata_1686919330680.53759765625000.txt  _Color_metadata_1686919330713.88598632812500.txt  _Color_metadata_1686919330747.23413085937500.txt  _Color_metadata_1686919330780.58227539062500.txt  _Color_metadata_1686919330813.93041992187500.txt  _Color_metadata_1686919330847.27856445312500.txt  _Color_metadata_1686919330880.62695312500000.txt  _Color_metadata_1686919330913.97607421875000.txt  _Color_metadata_1686919330947.32519531250000.txt  _Color_metadata_1686919330980.67431640625000.txt  _Color_metadata_1686919331014.02343750000000.txt  _Color_metadata_1686919331047.37231445312500.txt  (+350 more)
src/projects/yolov5/: CMakeLists.txt  package.xml
src/projects/yolov5/src/: ros_recognition_yolo.py  yolov5_node.cpp  yolov5_node.py
(+2693 files in other folders)
